--- a/index.html
+++ b/index.html
@@ -3,11 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <script src="https://cdn.jsdelivr.net/npm/js-cookie@3.0.1/dist/js.cookie.min.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="apps.js"defer></script>
     <title>W11A Saving State with Cookies</title>
 </head>
 <body>
-    
-</body>
+    <h1>Which would you choose?</h1>
+    <img id="ClassicImg" src="https://images.unsplash.com/photo-1615238359019-c8de4242e083?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8OHx8Y2FtYXJvfGVufDB8fDB8fA%3D%3D&auto=format&fit=crop&w=400&q=60" height="300px" alt="Classic">
+    <!-- <button id="ClassicImg"><img src="https://images.unsplash.com/photo-1615238359019-c8de4242e083?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8OHx8Y2FtYXJvfGVufDB8fDB8fA%3D%3D&auto=format&fit=crop&w=400&q=60" height="300px" alt="Classic"></button>
+    <button id="ConvertableImg"><img src="https://images.unsplash.com/photo-1615463204303-c3c22bac1642?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Nnx8Y2FtYXJvfGVufDB8fDB8fA%3D%3D&auto=format&fit=crop&w=400&q=60" height="300px" alt="Convertable"></button>
+    <button id="NewSchoolImg"><img src=https://images.unsplash.com/photo-1573074617613-fc8ef27eaa2f?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8M3x8Y2FtYXJvfGVufDB8fDB8fA%3D%3D&auto=format&fit=crop&w=400&q=60" height="300px" alt="New School" height="300px" alt="Classic"></button> -->
+    </body>
 </html>
